--- a/full-stack-project.example.conf
+++ b/full-stack-project.example.conf
@@ -1,14 +1,15 @@
 server {
 
-  server_name full-stack-project.learningfuze.com;
+  server_name mazybook.3.21.128.0;
 
-  root /home/ubuntu/$server_name/server/public;
+  root /home/ubuntu/mazybook.3.21.128.0/server/public;
 
   # The following location block should be added if using React Router
-  #
-  # location / {
-  #   try_files $uri $uri/ /index.html;
-  # }
+   index index.html;
+
+   location / {
+     try_files $uri $uri/ /index.html;
+   }
 
   location /api {
 
@@ -24,7 +25,7 @@ server {
     # proxy_set_header Upgrade $http_upgrade;
     # proxy_set_header Connection $connection_upgrade;
 
-    proxy_pass http://localhost:3001;
+    proxy_pass http://localhost:3200;
   }
 
 }
