--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "joi": "^14.3.1",
+    "jquery": "^3.5.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "multer": "^1.4.2",
-    "pg": "^7.18.1"
+    "pg": "^7.18.1",
+    "react-bootstrap": "^1.0.1"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5"
